post like list and comment like list added & post properties modified
